plugins {
    id 'org.springframework.boot' version '3.2.2'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'com.diffplug.spotless' version '6.25.0'
    id 'org.sonarqube' version '4.4.1.3373'
    id 'jacoco'
    id 'java'
    id 'application'
    id 'eclipse'
}

def ENABLE_PREVIEW = '--enable-preview'

java {
    sourceCompatibility = '17'
    targetCompatibility = '17'
}



dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
    implementation 'software.amazon.awssdk:s3:2.23.10'
    implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.3.0'
    implementation 'com.itextpdf:itext7-core:8.0.2'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    runtimeOnly 'org.glassfish.jaxb:jaxb-runtime:4.0.4'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    runtimeOnly 'net.logstash.logback:logstash-logback-encoder:7.4'
    generatedImplementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.apache.pdfbox:pdfbox:2.0.30'
    testImplementation 'com.github.tomakehurst:wiremock-jre8-standalone:3.0.1'

}

